--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+          htmlString += `<li><a href="${file.path}/index.html?url=${file.url}">${file.name}</a></li>`;
         }
         htmlString += '</ul>';
         let title = '<h1>Table of Contents</h1>'
