--- a/HTML - Pertemuan 1/penugasan/index.html
+++ b/HTML - Pertemuan 1/penugasan/index.html
@@ -12,7 +12,7 @@
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
-          htmlString += `<li><a href="${file.path}/index.html?url=${file.url}">${file.name}</a></li>`;
+          htmlString += `<li><a href="${window.location.hostname}/${file.path}/index.html?url=${file.url}">${file.name}</a></li>`;
         }
         htmlString += '</ul>';
         let title = '<h1>Table of Contents</h1>'
